# altv-java-module

./: LICENSE  README.md
alt-java/: pom.xml
alt-java/src/main/java/alt/java/: Alt.java  IResource.java  Listener.java  TestResource.java
alt-java/src/main/java/alt/java/AltJavaNative/: API.java  AltNative.java
alt-java/src/main/java/alt/java/entity/: BaseObject.java  BaseObjectType.java  Blip.java  Checkpoint.java  Colshape.java  Entity.java  InternalEntityManager.java  Player.java  Vehicle.java  VoiceChannel.java  WorldObject.java
alt-java/src/main/java/alt/java/events/: AltEvent.java  CheckpointEvent.java  ClientScriptEvent.java  ColshapeEvent.java  ConsoleCommandEvent.java  DataNodeReceivedEvent.java  EventHandler.java  EventManager.java  MetaDataChangeEvent.java  PlayerChangeVehicleSeatEvent.java  PlayerConnectEvent.java  PlayerDamageEvent.java  PlayerDeathEvent.java  PlayerDisconnectEvent.java  PlayerEnterVehicleEvent.java  PlayerLeaveVehicleEvent.java  RemoveEntityEvent.java  ServerScriptEvent.java
alt-java/src/main/java/alt/java/resource/: AltResource.java  AltResourceBase.java  AltResourceBaseInterface.java  JavaResourceLoader.java  ResourceClassLoader.java  ResourceManager.java
alt-java/src/main/java/alt/java/util/: Position.java  RGBA.java  Rotation.java
alt-java/src/main/java/alt/java/util/exceptions/: ResourceLoadFailException.java
module/: CMakeLists.txt
module/jdk-libs/: jvm.lib
module/src/: CMakeLists.txt  CMakeLists.txt.backup  IBaseObject_API.cpp  IBaseObject_API.h  IServer_API.cpp  JavaResource.cpp  JavaResource.h  JavaResource_API.h  Main.cpp  Main.h  ScriptRuntimeHandler.cpp  ScriptRuntimeHandler.h  ScriptRuntimeHandler_API.cpp  ScriptRuntimeHandler_API.h  ScriptVM.cpp  ScriptVM.h
module/src/API/: IBaseObject_API.h  IEntity_API.cpp  IEntity_API.h  IPlayer_API.cpp  IPlayer_API.h  IServer_API.h  IWorldObject_API.cpp  IWorldObject_API.h  JavaResource_API.cpp  JavaResource_API.h
